--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -4,7 +4,6 @@ enable_testing()
 
 if(NOT TARGET lw_std_test_suite)
 
-SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-std=c++17 -Wall -fsanitize=address")
 
 add_subdirectory(ftest)
 
@@ -14,6 +13,9 @@ add_executable(lw_std_test_suite testing.cpp)
 
 target_include_directories(lw_std_test_suite PRIVATE ../)
 target_link_libraries(lw_std_test_suite PRIVATE ftest)
+
+target_compile_options(lw_std_test_suite PRIVATE -std=c++17 -Wall -fsanitize=address)
+target_link_options(lw_std_test_suite PRIVATE -lasan)
 
 add_test(lw_std_test_suite lw_std_test_suite)
 
