Move header files into 'src' and dependencies into 'dependencies'

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,17 +2,10 @@ cmake_minimum_required(VERSION 3.1)
 enable_testing()
 project(lw_std_build)
 
-set (CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 17)
 set_property(GLOBAL PROPERTY CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
+add_subdirectory(src)
+
+add_subdirectory(dependencies/ftest)
 add_subdirectory(tests)
-
-install(DIRECTORY "${CMAKE_SOURCE_DIR}/" #source directory
-        DESTINATION "include/lw_std" #target directory
-        FILES_MATCHING #install only matched files
-        PATTERN "*.hpp" #select header files
-        PATTERN "build" EXCLUDE
-        PATTERN "tests" EXCLUDE
-        PATTERN ".*" EXCLUDE
-        PATTERN "**CMakeFiles**" EXCLUDE)
-
