--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,25 +1,22 @@
 cmake_minimum_required(VERSION 3.1)
 enable_testing()
 
-
 if(NOT TARGET lw_std_test_suite)
+    project(lw_std_test_suite)
 
-add_subdirectory(ftest)
+    add_executable(lw_std_test_suite testing.cpp)
 
-project(lw_std_test_suite)
+    target_include_directories(lw_std_test_suite PRIVATE ../src/)
+    target_include_directories(lw_std_test_suite PRIVATE ../dependencies/)
 
-add_executable(lw_std_test_suite testing.cpp)
+    target_link_libraries(lw_std_test_suite PRIVATE ftest)
 
-target_include_directories(lw_std_test_suite PRIVATE ../)
-target_link_libraries(lw_std_test_suite PRIVATE ftest)
+    if(NOT DEFINED DISABLE_ASAN)
+        target_compile_options(lw_std_test_suite PRIVATE -std=c++17 -Wall -fsanitize=address)
+        target_link_options(lw_std_test_suite PRIVATE -lasan)
+    else()
+        message("WARNING: address sanitizer has been disabled, memory access errors may not be detected")
+    endif()
 
-if(NOT DEFINED DISABLE_ASAN)
-    target_compile_options(lw_std_test_suite PRIVATE -std=c++17 -Wall -fsanitize=address)
-    target_link_options(lw_std_test_suite PRIVATE -lasan)
-else()
-    message("WARNING: address sanitizer has been disabled, memory access errors may not be detected")
-endif()
-
-add_test(lw_std_test_suite lw_std_test_suite)
-
+    add_test(lw_std_test_suite lw_std_test_suite)
 endif()
