--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,3 @@
-[submodule "tests/ftest"]
-	path = tests/ftest
+[submodule "dependencies/ftest"]
+	path = dependencies/ftest
 	url = https://github.com/Felix-Rm/ftest.git
-	branch = master
